creating fireworks defaults

--- a/examples/fireworks/fireworks_tutorial/FireWorks_Tutorials.ipynb
+++ b/examples/fireworks/fireworks_tutorial/FireWorks_Tutorials.ipynb
@@ -26,7 +26,8 @@
     "# launchpad.reset('', require_password=False)\n",
     "\n",
     "# create the Firework consisting of a custom \"Addition\" task\n",
-    "firework = Firework(AdditionTask(), spec={\"input_array\": [1, 2]})\n",
+    "firework = Firework(AdditionTask(), \n",
+    "                    spec={\"input_array\": [1, 2]})\n",
     "\n",
     "# store workflow and launch it locally\n",
     "launchpad.add_wf(firework)\n",
@@ -56,17 +57,27 @@
     "task3 = PyTask({\"func\": mod_name+\".print_message\", \"args\": [\"Jack is a manager.\"]})\n",
     "task4 = PyTask({\"func\": mod_name+\".print_message\", \"args\": [\"Kip is an intern.\"]})\n",
     "\n",
-    "fw1 = Firework(task1)\n",
-    "fw2 = Firework(task2)\n",
-    "fw3 = Firework(task3)\n",
-    "fw4 = Firework(task4)\n",
+    "fw1 = Firework(task1, name=\"PyTask1\")\n",
+    "fw2 = Firework(task2, name=\"PyTask2\" )\n",
+    "fw3 = Firework(task3, name=\"PyTask3\" )\n",
+    "fw4 = Firework(task4, name=\"PyTask4\" )\n",
     "\n",
     "# assemble Workflow from FireWorks and their connections by id\n",
-    "workflow = Workflow([fw1, fw2, fw3, fw4], {fw1: [fw2, fw3], fw2: [fw4], fw3: [fw4]})\n",
+    "workflow = Workflow([fw1, fw2, fw3, fw4], \n",
+    "                    {fw1: [fw2, fw3], fw2: [fw4], fw3: [fw4]},\n",
+    "                    name=\"PyTaskExample\"\n",
+    "                   )\n",
     "\n",
     "# store workflow and launch it locally\n",
     "launchpad.add_wf(workflow)\n",
-    "rapidfire(launchpad, FWorker(), strm_lvl=loglvl)"
+    "rapidfire(launchpad, FWorker(), strm_lvl=loglvl)\n",
+    "\n",
+    "# store workflow and launch it locally\n",
+    "launchpad.add_wf(workflow)\n",
+    "launch_rocket(launchpad, FWorker(), strm_lvl=loglvl)\n",
+    "launch_rocket(launchpad, FWorker(), strm_lvl=loglvl)\n",
+    "launch_rocket(launchpad, FWorker(), strm_lvl=loglvl)\n",
+    "launch_rocket(launchpad, FWorker(), strm_lvl=loglvl)"
    ]
   },
   {
