use Atoms instead of pAtoms in phonopy workflows

--- a/examples/phono3py/phono3py.ipynb
+++ b/examples/phono3py/phono3py.ipynb
@@ -11,9 +11,10 @@
     "import h5py\n",
     "\n",
     "from ase.calculators.emt import EMT\n",
-    "from hilde.parsers import read_structure\n",
+    "from ase.io import read\n",
     "from hilde.helpers.supercell import make_cubic_supercell\n",
-    "from hilde.tasks.calculate import calculate_multiple"
+    "from hilde.tasks.calculate import calculate_multiple\n",
+    "from hilde.structure.io import inform"
    ]
   },
   {
@@ -31,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atoms = read_structure('../Al.in')"
+    "atoms = read('../Al.in', format='aims')"
    ]
   },
   {
@@ -45,8 +46,7 @@
      "text": [
       "\n",
       "Geometry info for:\n",
-      "  input geometry:    Al32_225_32a\n",
-      "  Symmetry prec.:    1e-05\n",
+      "  input geometry:    Al32\n",
       "  Number of atoms:   32\n",
       "  Species:           Al\n",
       "  Periodicity:       [ True  True  True]\n",
@@ -55,28 +55,27 @@
       "    [0.       8.094532 0.      ]\n",
       "    [0.       0.       8.094532]\n",
       "\n",
-      "  Spacegroup:          Fm-3m (225)\n",
-      "  Wyckoff positions:   32*a\n",
-      "  Equivalent atoms:    32*0\n",
-      "  Standard lattice:  \n",
-      "    [4.047266 0.       0.      ]\n",
-      "    [0.       4.047266 0.      ]\n",
-      "    [0.       0.       4.047266]\n",
+      "  supercell_matrix: [-2, 2, 2, 2, -2, 2, 2, 2, -2]\n",
       "\n",
       "Cell lengths and angles [Å, °]:\n",
       "  a, b, c:      8.0945      8.0945      8.0945\n",
       "  α, β, γ:     90.0000     90.0000     90.0000\n",
-      "  Volume:     530.3655 Å**3\n",
-      "  Tag  1:                supercell\n",
-      "  Tag  2:                ('smatrix', [-2, 2, 2, 2, -2, 2, 2, 2, -2])\n"
+      "  Volume:     530.3655 Å**3\n"
      ]
     }
    ],
    "source": [
     "sc2, smatrix2 = make_cubic_supercell(atoms, 64)\n",
     "sc3, smatrix3 = make_cubic_supercell(atoms, 30)\n",
-    "sc3.inform()"
+    "inform(sc3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -100,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "<module 'hilde.phono3py.phono3' from '/home/knoop/local/python/lib/python3.7/site-packages/HiLDe-0.1-py3.7-linux-x86_64.egg/hilde/phono3py/phono3.py'>"
+       "<module 'hilde.phono3py.phono3' from '/home/knoop/local/hilde/hilde/phono3py/phono3.py'>"
       ]
      },
      "execution_count": 6,
@@ -165,18 +164,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/knoop/local/python/lib/python3.7/site-packages/HiLDe-0.1-py3.7-linux-x86_64.egg/hilde/tasks/calculate.py:45: UserWarning: dont compare stupid things -> replace me with hashes\n",
-      "  warn('dont compare stupid things -> replace me with hashes')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scs2_computed = calculate_multiple(scs2, calc, f'{atoms.sysname}/fc2', trajectory='fc2.traj')\n",
+    "scs2_computed = calculate_multiple(scs2, calc, 'test_run/fc2', trajectory='fc2.traj')\n",
     "fc2_forces = ph3.get_forces(scs2_computed)"
    ]
   },
@@ -186,19 +176,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/knoop/local/python/lib/python3.7/site-packages/HiLDe-0.1-py3.7-linux-x86_64.egg/hilde/tasks/calculate.py:45: UserWarning: dont compare stupid things -> replace me with hashes\n",
-      "  warn('dont compare stupid things -> replace me with hashes')\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 651 ms, sys: 7.93 ms, total: 659 ms\n",
-      "Wall time: 657 ms\n"
+      "CPU times: user 520 ms, sys: 159 µs, total: 520 ms\n",
+      "Wall time: 518 ms\n"
      ]
     },
     {
@@ -213,7 +195,7 @@
     }
    ],
    "source": [
-    "%time scs3_computed = calculate_multiple(scs3, calc, f'{atoms.sysname}/fc3', trajectory='fc3.traj')\n",
+    "%time scs3_computed = calculate_multiple(scs3, calc, 'test_run/fc3', trajectory='fc3.traj')\n",
     "fc3_forces = ph3.get_forces(scs3_computed)\n",
     "len(scs3_computed), len(scs3)"
    ]
@@ -226,9 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "{'supercell': True,\n",
-       " 'smatrix': [-2, 2, 2, 2, -2, 2, 2, 2, -2],\n",
-       " 'displacement_id': 28}"
+       "{'displacement_id': 28}"
       ]
      },
      "execution_count": 12,
@@ -271,8 +251,8 @@
       "Cutting-off fc3 (cut-off distance: 3.000000)\n",
       "Building atom mapping table...\n",
       "Creating contracted fc3...\n",
-      "CPU times: user 2.9 s, sys: 456 ms, total: 3.35 s\n",
-      "Wall time: 2.71 s\n"
+      "CPU times: user 2.78 s, sys: 535 ms, total: 3.32 s\n",
+      "Wall time: 2.67 s\n"
      ]
     }
    ],
@@ -322,12 +302,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.21045268e-06  9.01193475e-07  1.27453704e-06]\n",
+      "[[-1.10904910e-06  1.94533367e-07  1.35757994e-06]\n",
       " [-1.06954566e+00  2.85642562e+00  5.36872093e+00]\n",
       " [-5.52775954e-01  4.59473925e+00  6.60728814e+00]\n",
       " [-7.76155124e-01  5.41591746e+00  6.86746735e+00]]\n",
-      "[[ 3.17337785e+01  3.17337785e+01  3.17337785e+01 -1.67081201e-16\n",
-      "  -2.42726909e-17  5.86611778e-18]]\n"
+      "[[ 3.17337731e+01  3.17337731e+01  3.17337731e+01 -2.06432817e-16\n",
+      "  -2.42726872e-17 -7.28371948e-17]]\n"
      ]
     }
    ],
