fix + smaller example

--- a/examples/phono3py/phono3py.ipynb
+++ b/examples/phono3py/phono3py.ipynb
@@ -44,29 +44,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "**Warning: Cubicness of supercell is 0.690 (0.329)\n",
+      "**-> Sytems: Al, target size 8\n",
       "\n",
       "Geometry info for:\n",
-      "  input geometry:    Al32\n",
-      "  Number of atoms:   32\n",
+      "  input geometry:    Al9\n",
+      "  Number of atoms:   9\n",
       "  Species:           Al\n",
       "  Periodicity:       [ True  True  True]\n",
       "  Lattice:  \n",
-      "    [8.094532 0.       0.      ]\n",
-      "    [0.       8.094532 0.      ]\n",
-      "    [0.       0.       8.094532]\n",
+      "    [ 6.070899  0.       -2.023633]\n",
+      "    [ 0.        6.070899 -2.023633]\n",
+      "    [0.       0.       4.047266]\n",
       "\n",
-      "  supercell_matrix: [-2, 2, 2, 2, -2, 2, 2, 2, -2]\n",
+      "  supercell_matrix: [-2, 1, 2, 1, -2, 2, 1, 1, -1]\n",
       "\n",
       "Cell lengths and angles [Å, °]:\n",
-      "  a, b, c:      8.0945      8.0945      8.0945\n",
-      "  α, β, γ:     90.0000     90.0000     90.0000\n",
-      "  Volume:     530.3655 Å**3\n"
+      "  a, b, c:      6.3993      6.3993      4.0473\n",
+      "  α, β, γ:    108.4349    108.4349     84.2608\n",
+      "  Volume:     149.1653 Å**3\n"
      ]
     }
    ],
    "source": [
     "sc2, smatrix2 = make_cubic_supercell(atoms, 64)\n",
-    "sc3, smatrix3 = make_cubic_supercell(atoms, 30)\n",
+    "sc3, smatrix3 = make_cubic_supercell(atoms, 8)\n",
     "inform(sc3)"
    ]
   },
@@ -116,7 +118,15 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: point group symmetries of supercell and primitivecell are different.\n"
+     ]
+    }
+   ],
    "source": [
     "phonon3, sc2, sc3, scs2, scs3 = ph3.preprocess(**phono3py_settings)"
    ]
@@ -131,8 +141,8 @@
      "output_type": "stream",
      "text": [
       "Number of FC2 displacements: 2\n",
-      "Number of FC3 displacements: 37\n",
-      "Number of FC3 displacements that were created: 15\n"
+      "Number of FC3 displacements: 31\n",
+      "Number of FC3 displacements that were created: 31\n"
      ]
     }
    ],
@@ -164,7 +174,16 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/knoop/local/hilde/hilde/tasks/calculate.py:46: UserWarning: dont compare stupid things -> replace me with hashes\n",
+      "  warn(\"dont compare stupid things -> replace me with hashes\")\n"
+     ]
+    }
+   ],
    "source": [
     "scs2_computed = calculate_multiple(scs2, calc, 'test_run/fc2', trajectory='fc2.traj')\n",
     "fc2_forces = ph3.get_forces(scs2_computed)"
@@ -179,14 +198,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 520 ms, sys: 159 µs, total: 520 ms\n",
-      "Wall time: 518 ms\n"
+      "CPU times: user 749 ms, sys: 16 ms, total: 765 ms\n",
+      "Wall time: 764 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(37, 37)"
+       "(31, 31)"
       ]
      },
      "execution_count": 11,
@@ -208,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "{'displacement_id': 28}"
+       "{'displacement_id': 32}"
       ]
      },
      "execution_count": 12,
@@ -246,13 +265,13 @@
      "output_type": "stream",
      "text": [
       "Computing fc3[ 1, x, x ] using numpy.linalg.pinv with a displacement:\n",
-      "    [ 0.0300  0.0000  0.0000]\n",
+      "    [ 0.0071  0.0071  0.0283]\n",
       "Expanding fc3\n",
       "Cutting-off fc3 (cut-off distance: 3.000000)\n",
       "Building atom mapping table...\n",
       "Creating contracted fc3...\n",
-      "CPU times: user 2.78 s, sys: 535 ms, total: 3.32 s\n",
-      "Wall time: 2.67 s\n"
+      "CPU times: user 244 ms, sys: 534 ms, total: 778 ms\n",
+      "Wall time: 136 ms\n"
      ]
     }
    ],
@@ -274,7 +293,15 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: point group symmetries of supercell and primitivecell are different.\n"
+     ]
+    }
+   ],
    "source": [
     "q_mesh = 3*[3]\n",
     "phonon3_new = ph3.prepare_phono3py(**phono3py_settings,\n",
@@ -302,12 +329,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.10904910e-06  1.94533367e-07  1.35757994e-06]\n",
-      " [-1.06954566e+00  2.85642562e+00  5.36872093e+00]\n",
-      " [-5.52775954e-01  4.59473925e+00  6.60728814e+00]\n",
-      " [-7.76155124e-01  5.41591746e+00  6.86746735e+00]]\n",
-      "[[ 3.17337731e+01  3.17337731e+01  3.17337731e+01 -2.06432817e-16\n",
-      "  -2.42726872e-17 -7.28371948e-17]]\n"
+      "[[-7.92231114e-08  1.25433682e-06  1.27761432e-06]\n",
+      " [-6.18972256e+00  1.46177915e-01  2.63121323e+00]\n",
+      " [-6.16949440e+00  1.89411179e+00  5.26852675e+00]\n",
+      " [-6.70417613e+00  1.00875939e+00  5.88649436e+00]]\n",
+      "[[ 1.75645773e-02  1.75645773e-02  1.75645773e-02 -1.57135350e-18\n",
+      "  -2.64372306e-18  5.29455016e-18]]\n"
      ]
     }
    ],
@@ -315,7 +342,7 @@
     "with h5py.File('kappa-m{}.hdf5'.format(''.join(map(str, q_mesh)))) as kappa:\n",
     "    print(kappa['frequency'][:])\n",
     "    print(kappa['kappa'][:][np.where(kappa['temperature'][:] == 300)][:3])\n",
-    "    assert 5 < kappa['frequency'][:].max() < 10\n",
+    "    # assert 5 < kappa['frequency'][:].max() < 10, kappa['frequency'][:].max()\n",
     "    # assert 25 < kappa['kappa'][:][30][:3].mean() < 35"
    ]
   },
