rename `phonopy.phono` -> `phonopy.wrapper`

--- a/examples/old/phonons_socketio/phonons_socketio.py.ipynb
+++ b/examples/old/phonons_socketio/phonons_socketio.py.ipynb
@@ -12,7 +12,7 @@
     "from hilde.helpers.k_grid import d2k\n",
     "from hilde.helpers.geometry import get_cubicness\n",
     "from hilde.helpers.maths import clean_matrix\n",
-    "from hilde.phonopy import phono as ph\n",
+    "from hilde.phonopy import wrapper as ph\n",
     "from pathlib import Path\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
