--- a/examples/phonons/phonopy.ipynb
+++ b/examples/phonons/phonopy.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "from ase.calculators.emt import EMT\n",
     "from hilde.parsers import read_structure, read_output\n",
-    "from hilde.phonopy import phono as ph\n",
+    "from hilde.phonopy import wrapper as ph\n",
     "from hilde.helpers.brillouinzone import get_paths, get_bands_and_labels, get_cellinfo, bandpath\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
