--- a/examples/supercells/conventions.ipynb
+++ b/examples/supercells/conventions.ipynb
@@ -22,7 +22,7 @@
     "from hilde.helpers.geometry import get_cubicness\n",
     "from hilde.helpers.maths import clean_matrix\n",
     "from ase.build.supercells import make_supercell\n",
-    "from hilde.phonopy import phono as ph"
+    "from hilde.phonopy import wrapper as ph"
    ]
   },
   {
