update phono3py example

--- a/examples/phono3py/phono3py.ipynb
+++ b/examples/phono3py/phono3py.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import importlib as il\n",
     "import numpy as np\n",
     "import h5py\n",
     "\n",
@@ -14,7 +13,9 @@
     "from ase.io import read\n",
     "from hilde.helpers.supercell import make_cubic_supercell\n",
     "from hilde.tasks.calculate import calculate_multiple\n",
-    "from hilde.structure.io import inform"
+    "from hilde.structure.io import inform\n",
+    "\n",
+    "from hilde.phono3py import wrapper as ph3"
    ]
   },
   {
@@ -23,21 +24,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ph3 = il.import_module('hilde.phono3py.phono3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "atoms = read('../Al.in', format='aims')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,14 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,28 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'hilde.phono3py.phono3' from '/home/knoop/local/hilde/hilde/phono3py/phono3.py'>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "il.reload(ph3)\n",
-    "# help(ph3.preprocess)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -179,7 +143,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/knoop/local/hilde/hilde/tasks/calculate.py:46: UserWarning: dont compare stupid things -> replace me with hashes\n",
+      "/home/knoop/local/python/lib/python3.7/site-packages/HiLDe-0.1-py3.7-linux-x86_64.egg/hilde/tasks/calculate.py:46: UserWarning: dont compare stupid things -> replace me with hashes\n",
       "  warn(\"dont compare stupid things -> replace me with hashes\")\n"
      ]
     }
@@ -191,15 +155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/knoop/local/python/lib/python3.7/site-packages/HiLDe-0.1-py3.7-linux-x86_64.egg/hilde/tasks/calculate.py:46: UserWarning: dont compare stupid things -> replace me with hashes\n",
+      "  warn(\"dont compare stupid things -> replace me with hashes\")\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 749 ms, sys: 16 ms, total: 765 ms\n",
-      "Wall time: 764 ms\n"
+      "CPU times: user 715 ms, sys: 16.2 ms, total: 731 ms\n",
+      "Wall time: 729 ms\n"
      ]
     },
     {
@@ -208,7 +180,7 @@
        "(31, 31)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +202,7 @@
        "{'displacement_id': 32}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -270,8 +242,8 @@
       "Cutting-off fc3 (cut-off distance: 3.000000)\n",
       "Building atom mapping table...\n",
       "Creating contracted fc3...\n",
-      "CPU times: user 244 ms, sys: 534 ms, total: 778 ms\n",
-      "Wall time: 136 ms\n"
+      "CPU times: user 223 ms, sys: 424 ms, total: 648 ms\n",
+      "Wall time: 114 ms\n"
      ]
     }
    ],
@@ -281,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
