Renaming and preparation for changes regarding settings and configuration files: * store DEFAULT_SETTINGS_FILE in hilde/__init__ (prev. in helpers/config.py) * rename fireworks_settings -> fireworks (since it lives within settings already)

--- a/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
+++ b/examples/fireworks/fireworks_tutorial/SinglePointForceCalc.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "# Remote Settings (Change these to match what you need)\n",
     "settings = Settings(\"/home/purcell/git/hilde/hilde.cfg\")\n",
-    "fireworks_kwargs = settings.fireworks_settings"
+    "fireworks_kwargs = settings.fireworks"
    ]
   },
   {
